# connect4

./: .gitignore  CMakeLists.txt  README.md  bitboard.cpp  bitboard.h  game.cpp  game.h  hash.cpp  hash.h  main.cpp  move.cpp  move.h  search.cpp  search.h
